--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,8 +41,14 @@ flutter:
   uses-material-design: true
 
   assets:
-    - assets/images/earth.jpg
-    - assets/images/mars.jpg
+    - assets/images/0.jpg
+    - assets/images/1.jpg
+    - assets/images/2.jpg
+    - assets/images/3.jpg
+    - assets/images/4.jpg
+    - assets/images/5.jpg
+    - assets/images/6.jpg
+    - assets/images/7.jpg
   # To add assets to your application, add an assets section, like this:
   # assets:
   #  - images/a_dot_burr.jpeg
